--- a/css/index.css
+++ b/css/index.css
@@ -146,7 +146,7 @@ footer {
 }
 
 h3{
-    margin-block-start: -594px;
+    margin-block-start: -572px;
     margin-block-end: 1em;
     margin-inline-start: -10px;
     margin-inline-end: 0px;
@@ -174,22 +174,29 @@ h2{
 }
 div#gallery{
     margin:0 auto;
-    border: 10px solid white; /* 굵은테두리*/
-    background: white; /* 배경색*/
+    /* 배경색 */
+    background: white;  
+    /* 위 아래로 조정 */
     margin-block-start: -264px;
     margin-block-end: 1em;
+    /* 양 옆으로 조정 */
     margin-inline-start: 200px;
     margin-inline-end: 0px;
 }
 div#gallery ul li{
+    /* 사진에 마우스 올릴때 오른쪽 위에 뜨게 해줌 */
     position:relative;
-    list-style:none;
+    /* 세 개로 가지런하게 정렬해줌  */
     float:left;
+    /* 마진을 줘야 사진 간격 조정됨 */
     margin:0 10px 10px 0;
 }
 div#gallery ul li img.small{
+    /* 가로길이 조정 */
     width:230px;
+    /* 세로길이 조정 */
     height:190px;
+    /* 사진에 마우스 올렸을떄 */
     cursor:pointer;
 }
 div#gallery ul li img.pic{
@@ -198,9 +205,11 @@ div#gallery ul li img.pic{
     top:-180px;
     width:320px;
     height:240px;
+    /* 테두리 */
     border:4px solid black;
+    /* 포지셔닝된 요소들의 쌓임 순서를 조절 */
     z-index:10;
-    
+    /* 사진에 마우스 올렸을때 더 크게 확대돼서 출력됨( */
     visibility:hidden;
 }
 /* 작은사진, 확대사진에 hover시 모두 보여줌. */
@@ -382,10 +391,12 @@ visibility:visible;
     margin-inline-end: 0px;
 }
 #users{
-    width: 800px;
+    width: 1000px;
     border: 1px solid ;
     border-collapse: collapse;
-    margin-left: 24%;
+    margin-left: 20%;
+
+   
 }
 #users > thead > tr > th{
     border: 3px solid palevioletred;
